fixed z index on mobile nav

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -402,7 +402,7 @@ header {
 	-webkit-transition: .3s ease-in-out;
 	-o-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
-	z-index: 1100;
+	z-index: 111100;
 	padding: 10px 20px;
 }
 
